<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginTop="80dp"
    android:gravity="center_horizontal" >

    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/head" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >
    	<TextView 
    	    android:id="@+id/username"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/user_name"/>
    	<TextView 
    	    android:id="@+id/name_contant"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/name_contant"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    	<TextView 
    	    android:id="@+id/gender"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/gender"/>
    	<TextView 
    	    android:id="@+id/name_contant"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/gender_contant"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    	<TextView 
    	    android:id="@+id/weibo"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/weibo"/>
    	<TextView 
    	    android:id="@+id/weibo_contant"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/weibo_contant"/>
    </LinearLayout>

</LinearLayout>