<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0edef"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="114dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#07b5b3"
            android:textColor="#ffffff"
            android:text="@string/view_journey"
            android:onClick="gotoList" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#07b5b3"
            android:textColor="#ffffff"
            android:text="@string/create_journey"
            android:onClick="gotoNew" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#07b5b3"
            android:textColor="#ffffff"
            android:text="@string/my_profile"
            android:onClick="gotoProfile" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="123dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo" />

</RelativeLayout>